force-app/main/default/objects/State_Surcharge_Rule__c/State_Surcharge_Rule__c.object-meta.xml
<CustomObject>
    <label>State Surcharge Rule</label>
    <nameField>
        <displayFormat>SRR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Surcharge Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>