force-app/main/default/objects/State_Surcharge_Rule__c/fields/Surcharge_Percent__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Percent__c</fullName>
    <label>Surcharge Percent</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>