force-app/main/default/objects/State_Surcharge_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Usage__c</columns>
    <columns>Coverage_Type__c</columns>
    <columns>Surcharge_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>